--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 @font-face {
     font-family: 'Vazir';
-    src: url('https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/Vazir.woff2') format('woff2');
+    src: url('fonts/Vazirmatn.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
